...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I0i-Tu-e8z">
                                <rect key="frame" x="36" y="343" width="91" height="29"/>
                                <fontDescription key="fontDescription" name="Courier" family="Courier" pointSize="25"/>
                                <state key="normal" title="Log in">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="LogIn:" destination="j3C-5p-1ZM" eventType="touchUpInside" id="k2d-qf-dyh"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QwG-di-rn1" userLabel="UsernameTextField" customClass="UsernameTextField">
                                <rect key="frame" x="36" y="281" width="303" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="QwG-di-rn1" secondAttribute="height" multiplier="101:10" id="mZE-zQ-Xgh"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" secureTextEntry="YES"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ofh-qK-Tkk" userLabel="UsernameTextField" customClass="UsernameTextField">
                                <rect key="frame" x="36" y="210" width="303" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="ofh-qK-Tkk" secondAttribute="height" multiplier="101:10" id="u0f-HA-lUT"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <constraint firstAttribute="width" secondItem="w1a-hq-M0e" secondAttribute="height" multiplier="40:29" id="9Ee-gx-6ca"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jNC-bS-zbt">
                                <rect key="frame" x="233" y="343" width="106" height="29"/>
                                <fontDescription key="fontDescription" name="Courier" family="Courier" pointSize="25"/>
                                <state key="normal" title="Sign up">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="SignUp:" destination="j3C-5p-1ZM" eventType="touchUpInside" id="uvq-eh-gaN"/>
                                </connections>
                            </button>
...
                                    <navigationItem title="Conversations" id="28f-bp-f4e">
                                        <barButtonItem key="leftBarButtonItem" style="plain" id="cVb-is-ISN">
                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="BHe-kN-nhi">
                                                <rect key="frame" x="16" y="4" width="62" height="36"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <fontDescription key="fontDescription" name="Courier" family="Courier" pointSize="17"/>
                                                <state key="normal" title="Logout">
                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="logOutButton:" destination="YqD-xz-aJ9" eventType="touchUpInside" id="qzY-jc-2ZH"/>
                                                </connections>
                                            </button>
...
                                </textAttributes>
                                <textAttributes key="largeTitleTextAttributes">
                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </textAttributes>
                                <items>
                                    <navigationItem title="Message" id="fSB-41-kw7">
                                        <barButtonItem key="leftBarButtonItem" title="Back" id="o7v-fC-dRT">
                                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <connections>
                                                <action selector="backButton:" destination="lNd-2L-hT3" id="3EA-f7-oMV"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
...
